--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ sudo: required
 dist: trusty
 
 addons:
+  chrome: stable
   apt:
     sources:
       - google-chrome
@@ -20,14 +21,18 @@ before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 
+cache:
+  directories:
+    - ./node_modules
+
 install:
   - npm install
   - npm install -g angular-cli-ghpages
 
 script:
-  - npm run test
-  - npm run e2e
-  - npm run build
+#  - npm run test
+#  - npm run e2e
+  - npm run build-lib
   - npm run build-ghpages
 
 after_success:
