--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,8 @@ dist: trusty
 addons:
   chrome: stable
   apt:
-    sources:
-      - google-chrome
     packages:
-      - google-chrome-stable
+      - dpkg
 
 language: node_js
 node_js:
