Add support for web accessibility Improve demo page and fix minor bug (svg-inline)

--- a/package.json
+++ b/package.json
@@ -1,115 +1,118 @@
 {
-  "name": "@ui4ngx/fontawesome",
-  "version": "5.5.1",
-  "description": "Another Angular way to display FontAwesome (v5+).",
-  "author": "Tuyen T Tran <anhtuyen.tran@gmail.com> (www.exodussystem.com)",
-  "license": "MIT",
-  "main": "src/index.ts",
-  "scripts": {
-    "clean": "rimraf dist/*",
-    "start": "ng serve --aot",
-    "copy-scss": "copyfiles -u 1 assets/css/*.*css dist/@ui4ngx/fontawesome",
-    "copy-esm5": "copyfiles -u 4 dist/@ui4ngx/fontawesome/@ui4ngx/*.es5.* dist/@ui4ngx/fontawesome/esm5 && rimraf dist/@ui4ngx/fontawesome/@ui4ngx/*.es5.*",
-    "copy-esm2015": "copyfiles -u 4 dist/@ui4ngx/fontawesome/@ui4ngx/*.js* dist/@ui4ngx/fontawesome/esm2015 && rimraf dist/@ui4ngx/fontawesome/@ui4ngx",
-    "remove-extras": "rimraf dist/@ui4ngx/fontawesome/@ui4ngx && rimraf dist/@ui4ngx/fontawesome/example",
-    "build-packagr": "ng-packagr -p ng-package.json",
-    "build-lib": "npm run clean && npm run build-packagr && npm run copy-scss && npm run copy-esm5 && npm run copy-esm2015 && npm run remove-extras",
-    "build-ghpages": "ng build --base-href \"https://tuyenttran.github.io/ngx-fontawesome/\" --output-path \"dist-ghpages\"",
-    "test": "npm run lint && ng test --watch false",
-    "test-watch": "ng test",
-    "e2e": "ng e2e",
-    "e2e-watch": "watch \"ng e2e -s false\" src e2e --wait=1",
-    "lint": "ng lint",
-    "publish-local": "npm run build-lib && npm publish dist/@ui4ngx/fontawesome/ --registry http://localhost:4873/",
-    "publish-npm": "npm run build-lib && npm publish --access=public dist/@ui4ngx/fontawesome/ --registry https://registry.npmjs.org/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tuyenttran/ngx-fontawesome.git"
-  },
-  "bugs": {
-    "url": "https://github.com/tuyenttran/ngx-fontawesome/issues"
-  },
-  "homepage": "https://github.com/tuyenttran/ngx-fontawesome#readme",
-  "keywords": [
-    "angular-font-awesome",
-    "ng-font-awesome",
-    "ng-fontawesome",
-    "ngx-fontawesome",
-    "@ui4ngx/fontawesome",
-    "font-awesome",
-    "fontawesome",
-    "font awesome",
-    "font-awesome 5",
-    "fontawesome 5",
-    "font awesome 5",
-    "angular",
-    "@angular",
-    "angular 5",
-    "angular 6",
-    "angular 7",
-    "angular 8",
-    "angular 9",
-    "angular 10",
-    "angular 11",
-    "ng",
-    "ngx",
-    "ui",
-    "@ngx",
-    "@ui4ngx"
-  ],
-  "private": false,
-  "publishConfig": {
-    "access": "public",
-    "registry": "https://registry.npmjs.org/"
-  },
-  "peerDependencies": {
-    "@angular/common": "^5.0.0",
-    "@angular/core": "^5.0.0"
-  },
-  "devDependencies": {
-    "@angular-devkit/core": "^0.0.29",
-    "@angular/animations": "^5.0.0",
-    "@angular/cli": "1.5.4",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-regular-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "anymatch": "^3.1.2",
-    "chokidar": "^3.5.2",
-    "codelyzer": "^4.0.1",
-    "copyfiles": "2.2.0",
-    "core-js": "^2.4.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^1.5.0-rc.1",
-    "ngx-highlight-js": "^2.1.1",
-    "protractor": "~5.1.2",
-    "rimraf": "^2.6.1",
-    "rxjs": "^5.5.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2",
-    "uglify-js": "^3.3.18",
-    "watch": "^1.0.2",
-    "zone.js": "^0.8.14"
-  }
+    "name": "@ui4ngx/fontawesome",
+    "version": "5.5.2",
+    "description": "Another Angular way to display FontAwesome (v5+).",
+    "author": "Tuyen T Tran <anhtuyen.tran@gmail.com> (www.exodussystem.com)",
+    "license": "MIT",
+    "main": "src/index.ts",
+    "typings": "fontawesome.d.ts",
+    "metadata": "fontawesome.metadata.json",
+    "scripts": {
+        "clean": "rimraf dist/*",
+        "start": "ng serve --aot",
+        "copy-scss": "copyfiles -u 1 assets/css/*.*css dist/@ui4ngx/fontawesome",
+        "copy-esm5": "copyfiles -u 4 dist/@ui4ngx/fontawesome/@ui4ngx/*.es5.* dist/@ui4ngx/fontawesome/esm5 && rimraf dist/@ui4ngx/fontawesome/@ui4ngx/*.es5.*",
+        "copy-esm2015": "copyfiles -u 4 dist/@ui4ngx/fontawesome/@ui4ngx/*.js* dist/@ui4ngx/fontawesome/esm2015 && rimraf dist/@ui4ngx/fontawesome/@ui4ngx",
+        "remove-extras": "rimraf dist/@ui4ngx/fontawesome/@ui4ngx && rimraf dist/@ui4ngx/fontawesome/example",
+        "build-packagr": "ng-packagr -p ng-package.json",
+        "build-lib": "npm run clean && npm run build-packagr && npm run copy-scss && npm run copy-esm5 && npm run copy-esm2015 && npm run remove-extras",
+        "build-ghpages": "ng build --base-href \"https://tuyenttran.github.io/ngx-fontawesome/\" --output-path \"dist-ghpages\"",
+        "test": "npm run lint && ng test --watch false",
+        "test-watch": "ng test",
+        "e2e": "ng e2e",
+        "e2e-watch": "watch \"ng e2e -s false\" src e2e --wait=1",
+        "lint": "ng lint",
+        "publish-local": "npm run build-lib && npm publish dist/@ui4ngx/fontawesome/ --registry http://localhost:4873/",
+        "publish-npm": "npm run build-lib && npm publish --access=public dist/@ui4ngx/fontawesome/ --registry https://registry.npmjs.org/"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/tuyenttran/ngx-fontawesome.git"
+    },
+    "bugs": {
+        "url": "https://github.com/tuyenttran/ngx-fontawesome/issues"
+    },
+    "homepage": "https://tuyenttran.github.io/ngx-fontawesome/",
+    "keywords": [
+        "@ui4ngx/fontawesome",
+        "angular-font-awesome",
+        "ng-font-awesome",
+        "ng-fontawesome",
+        "ngx-fontawesome",
+        "font-awesome",
+        "fontawesome",
+        "font awesome",
+        "font-awesome 5",
+        "fontawesome 5",
+        "font awesome 5",
+        "angular",
+        "@angular",
+        "angular 5",
+        "angular 6",
+        "angular 7",
+        "angular 8",
+        "angular 9",
+        "angular 10",
+        "angular 11",
+        "ng",
+        "ngx",
+        "ui",
+        "@ngx",
+        "@ui4ngx"
+    ],
+    "private": false,
+    "publishConfig": {
+        "access": "public",
+        "registry": "https://registry.npmjs.org/"
+    },
+    "peerDependencies": {
+        "@angular/common": "^5.0.0",
+        "@angular/core": "^5.0.0"
+    },
+    "devDependencies": {
+        "@angular-devkit/core": "^0.0.29",
+        "@angular/animations": "^5.0.0",
+        "@angular/cli": "1.5.4",
+        "@angular/common": "^5.0.0",
+        "@angular/compiler": "^5.0.0",
+        "@angular/compiler-cli": "^5.0.0",
+        "@angular/core": "^5.0.0",
+        "@angular/forms": "^5.0.0",
+        "@angular/http": "^5.0.0",
+        "@angular/language-service": "^5.0.0",
+        "@angular/platform-browser": "^5.0.0",
+        "@angular/platform-browser-dynamic": "^5.0.0",
+        "@angular/router": "^5.0.0",
+        "@fortawesome/fontawesome-free": "^5.15.4",
+        "@fortawesome/free-brands-svg-icons": "^5.15.4",
+        "@fortawesome/free-regular-svg-icons": "^5.15.4",
+        "@fortawesome/free-solid-svg-icons": "^5.15.4",
+        "@types/jasmine": "~2.5.53",
+        "@types/jasminewd2": "~2.0.2",
+        "@types/node": "~6.0.60",
+        "anymatch": "^3.1.2",
+        "chokidar": "^3.5.2",
+        "codelyzer": "^4.0.1",
+        "copyfiles": "2.2.0",
+        "core-js": "^2.4.1",
+        "jasmine-core": "~2.6.2",
+        "jasmine-spec-reporter": "~4.1.0",
+        "karma": "~1.7.0",
+        "karma-chrome-launcher": "~2.1.1",
+        "karma-cli": "~1.0.1",
+        "karma-coverage-istanbul-reporter": "^1.2.1",
+        "karma-jasmine": "~1.1.0",
+        "karma-jasmine-html-reporter": "^0.2.2",
+        "ng-packagr": "^1.5.0-rc.1",
+        "ngx-highlight-js": "^2.1.1",
+        "protractor": "~5.1.2",
+        "rimraf": "^2.6.1",
+        "rxjs": "^5.5.2",
+        "ts-node": "~3.2.0",
+        "tslint": "~5.7.0",
+        "typescript": "~2.4.2",
+        "uglify-js": "^3.3.18",
+        "watch": "^1.0.2",
+        "zone.js": "^0.8.14"
+    }
 }
