Upgrade to Angular version 7.0.0

--- a/package.json
+++ b/package.json
@@ -1,21 +1,20 @@
 {
     "name": "@ui4ngx/fontawesome",
-    "version": "5.5.2",
+    "version": "7.5.2",
     "description": "Another Angular way to display FontAwesome (v5+).",
     "author": "Tuyen T Tran <anhtuyen.tran@gmail.com> (www.exodussystem.com)",
     "license": "MIT",
-    "main": "src/index.ts",
-    "typings": "fontawesome.d.ts",
-    "metadata": "fontawesome.metadata.json",
+    "main": "bundles/ui4ngx-fontawesome.umd.js",
+    "typings": "ui4ngx-fontawesome.d.ts",
+    "metadata": "ui4ngx-fontawesome.metadata.json",
+    "style": "css/ngx-fontawesome.scss",
     "scripts": {
         "clean": "rimraf dist/*",
         "start": "ng serve --aot",
         "copy-scss": "copyfiles -u 1 assets/css/*.*css dist/@ui4ngx/fontawesome",
-        "copy-esm5": "copyfiles -u 4 dist/@ui4ngx/fontawesome/@ui4ngx/*.es5.* dist/@ui4ngx/fontawesome/esm5 && rimraf dist/@ui4ngx/fontawesome/@ui4ngx/*.es5.*",
-        "copy-esm2015": "copyfiles -u 4 dist/@ui4ngx/fontawesome/@ui4ngx/*.js* dist/@ui4ngx/fontawesome/esm2015 && rimraf dist/@ui4ngx/fontawesome/@ui4ngx",
-        "remove-extras": "rimraf dist/@ui4ngx/fontawesome/@ui4ngx && rimraf dist/@ui4ngx/fontawesome/example",
+        "remove-extras": "rimraf dist/@ui4ngx/fontawesome/example",
         "build-packagr": "ng-packagr -p ng-package.json",
-        "build-lib": "npm run clean && npm run build-packagr && npm run copy-scss && npm run copy-esm5 && npm run copy-esm2015 && npm run remove-extras",
+        "build-lib": "npm run clean && npm run build-packagr && npm run copy-scss && npm run remove-extras",
         "build-ghpages": "ng build --base-href \"https://tuyenttran.github.io/ngx-fontawesome/\" --output-path \"dist-ghpages\"",
         "test": "npm run lint && ng test --watch false",
         "test-watch": "ng test",
@@ -47,13 +46,13 @@
         "font awesome 5",
         "angular",
         "@angular",
-        "angular 5",
-        "angular 6",
         "angular 7",
         "angular 8",
         "angular 9",
         "angular 10",
         "angular 11",
+        "angular 12",
+        "angular 13",
         "ng",
         "ngx",
         "ui",
@@ -66,51 +65,54 @@
         "registry": "https://registry.npmjs.org/"
     },
     "peerDependencies": {
-        "@angular/common": "^5.0.0",
-        "@angular/core": "^5.0.0"
+        "@angular/common": "^6.0.0 || ^7.0.0",
+        "@angular/core": "^6.0.0 || ^7.0.0"
     },
     "devDependencies": {
-        "@angular-devkit/core": "^0.0.29",
-        "@angular/animations": "^5.0.0",
-        "@angular/cli": "1.5.4",
-        "@angular/common": "^5.0.0",
-        "@angular/compiler": "^5.0.0",
-        "@angular/compiler-cli": "^5.0.0",
-        "@angular/core": "^5.0.0",
-        "@angular/forms": "^5.0.0",
-        "@angular/http": "^5.0.0",
-        "@angular/language-service": "^5.0.0",
-        "@angular/platform-browser": "^5.0.0",
-        "@angular/platform-browser-dynamic": "^5.0.0",
-        "@angular/router": "^5.0.0",
+        "@angular-devkit/build-angular": "^0.10.7",
+        "@angular-devkit/core": "~7.0.1",
+        "@angular/animations": "~7.0.0",
+        "@angular/cli": "~7.0.1",
+        "@angular/common": "~7.0.0",
+        "@angular/compiler": "~7.0.0",
+        "@angular/compiler-cli": "~7.0.0",
+        "@angular/core": "~7.0.0",
+        "@angular/forms": "~7.0.0",
+        "@angular/language-service": "~7.0.0",
+        "@angular/platform-browser": "~7.0.0",
+        "@angular/platform-browser-dynamic": "~7.0.0",
+        "@angular/router": "~7.0.0",
         "@fortawesome/fontawesome-free": "^5.15.4",
         "@fortawesome/free-brands-svg-icons": "^5.15.4",
         "@fortawesome/free-regular-svg-icons": "^5.15.4",
         "@fortawesome/free-solid-svg-icons": "^5.15.4",
-        "@types/jasmine": "~2.5.53",
-        "@types/jasminewd2": "~2.0.2",
-        "@types/node": "~6.0.60",
+        "@types/fs-extra": "^5.0.4",
+        "@types/jasmine": "~2.8.8",
+        "@types/node": "~10.9.4",
         "anymatch": "^3.1.2",
         "chokidar": "^3.5.2",
-        "codelyzer": "^4.0.1",
+        "codelyzer": "~4.5.0",
         "copyfiles": "2.2.0",
-        "core-js": "^2.4.1",
-        "jasmine-core": "~2.6.2",
-        "jasmine-spec-reporter": "~4.1.0",
+        "core-js": "~2.6",
+        "fs-extra": "^7.0.0",
+        "jasmine-core": "3.2.1",
+        "jasmine-spec-reporter": "~4.2.1",
         "karma": "~1.7.0",
         "karma-chrome-launcher": "~2.1.1",
         "karma-cli": "~1.0.1",
         "karma-coverage-istanbul-reporter": "^1.2.1",
-        "karma-jasmine": "~1.1.0",
-        "karma-jasmine-html-reporter": "^0.2.2",
-        "ng-packagr": "^1.5.0-rc.1",
+        "karma-jasmine": "~1.1.2",
+        "karma-jasmine-html-reporter": "1.3.1",
+        "ng-packagr": "4.3.1",
         "ngx-highlight-js": "^2.1.1",
         "protractor": "~5.1.2",
         "rimraf": "^2.6.1",
-        "rxjs": "^5.5.2",
-        "ts-node": "~3.2.0",
-        "tslint": "~5.7.0",
-        "typescript": "~2.4.2",
+        "rxjs": "~6.4",
+        "ts-node": "~7.0.1",
+        "tsickle": "0.34.0",
+        "tslib": "^1.9.0",
+        "tslint": "~5.11.0",
+        "typescript": "~3.1.1",
         "uglify-js": "^3.3.18",
         "watch": "^1.0.2",
         "zone.js": "^0.8.14"
